@@ -1,13 +1,13 @@
 require "thread"
 require "timeout"
-require "pool_party/active_support"
-require "pool_party/queue"
-require "pool_party/execution"
-require "pool_party/worker"
+require "thread_storm/active_support"
+require "thread_storm/queue"
+require "thread_storm/execution"
+require "thread_storm/worker"
 
-class PoolParty
+class ThreadStorm
   
-  # Array of executions in order as defined by calls to PoolParty#execute.
+  # Array of executions in order as defined by calls to ThreadStorm#execute.
   attr_reader :executions
   
   # Valid options are
@@ -15,7 +15,7 @@ class PoolParty
   #   :timeout => Max time an execution is allowed to run before terminating it.  Default is nil (no timeout).
   #   :timeout_method => An object that implements something like Timeout.timeout via #call.  Default is Timeout.method(:timeout).
   #   :default_value => Value of an execution if it times out or errors.  Default is nil.
-  #   :reraise => True if you want exceptions reraised when PoolParty#join is called.  Default is true.
+  #   :reraise => True if you want exceptions reraised when ThreadStorm#join is called.  Default is true.
   def initialize(options = {})
     @options = options.option_merge :size => 2,
                                     :timeout => nil,
@@ -46,7 +46,7 @@ class PoolParty
   end
   
   # Create and execution and schedules it to be run by the thread pool.
-  # Return value is a PoolParty::Execution.
+  # Return value is a ThreadStorm::Execution.
   def execute(*args, &block)
     Execution.new(args, &block).tap do |execution|
       execution.value = default_value
@@ -56,7 +56,7 @@ class PoolParty
   end
   
   # Block until all pending executions are finished running.
-  # Reraises any exceptions caused by executions unless <tt>:reraise => false</tt> was passed to PoolParty#new.
+  # Reraises any exceptions caused by executions unless <tt>:reraise => false</tt> was passed to ThreadStorm#new.
   def join
     @executions.each do |execution|
       execution.join
@@ -64,7 +64,7 @@ class PoolParty
     end
   end
   
-  # Calls PoolParty#join, then collects the values of each execution.
+  # Calls ThreadStorm#join, then collects the values of each execution.
   def values
     join
     @executions.collect{ |execution| execution.value }
