@@ -4,7 +4,7 @@ require "set"
 
 $LOAD_PATH.unshift(File.join(File.dirname(__FILE__), '..', 'lib'))
 $LOAD_PATH.unshift(File.dirname(__FILE__))
-require 'pool_party'
+require 'thread_storm'
 
 class Test::Unit::TestCase
   
