@@ -1,9 +1,9 @@
 require 'helper'
 
-class TestPoolParty < Test::Unit::TestCase
+class TestThreadStorm < Test::Unit::TestCase
   
   def test_no_concurrency
-    pool = PoolParty.new :size => 1
+    pool = ThreadStorm.new :size => 1
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.01); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -12,7 +12,7 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_partial_concurrency
-    pool = PoolParty.new :size => 2
+    pool = ThreadStorm.new :size => 2
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.01); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -21,7 +21,7 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_full_concurrency
-    pool = PoolParty.new :size => 3
+    pool = ThreadStorm.new :size => 3
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.01); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -30,7 +30,7 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_timeout_no_concurrency
-    pool = PoolParty.new :size => 1, :timeout => 0.015
+    pool = ThreadStorm.new :size => 1, :timeout => 0.015
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.02); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -44,7 +44,7 @@ class TestPoolParty < Test::Unit::TestCase
   # 2 0.015s ------
   # 3 0.01s      ----
   def test_timeout_partial_concurrency
-    pool = PoolParty.new :size => 2, :timeout => 0.015
+    pool = ThreadStorm.new :size => 2, :timeout => 0.015
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.02); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -54,7 +54,7 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_timeout_full_concurrency
-    pool = PoolParty.new :size => 3, :timeout => 0.015
+    pool = ThreadStorm.new :size => 3, :timeout => 0.015
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.02); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -64,7 +64,7 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_timeout_with_default_value
-    pool = PoolParty.new :size => 1, :timeout => 0.015, :default_value => "timed out"
+    pool = ThreadStorm.new :size => 1, :timeout => 0.015, :default_value => "timed out"
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.02); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -76,7 +76,7 @@ class TestPoolParty < Test::Unit::TestCase
   def test_shutdown
     original_thread_count = Thread.list.length
     
-    pool = PoolParty.new :size => 3
+    pool = ThreadStorm.new :size => 3
     pool.execute{ sleep(0.01); "one" }
     pool.execute{ sleep(0.01); "two" }
     pool.execute{ sleep(0.01); "three" }
@@ -88,12 +88,12 @@ class TestPoolParty < Test::Unit::TestCase
   end
   
   def test_shutdown_before_pop
-    pool = PoolParty.new :size => 3
+    pool = ThreadStorm.new :size => 3
     pool.shutdown
   end
   
   def test_args
-    pool = PoolParty.new :size => 2
+    pool = ThreadStorm.new :size => 2
     %w[one two three four five].each do |word|
       pool.execute(word){ |w| sleep(0.01); w }
     end
@@ -103,7 +103,7 @@ class TestPoolParty < Test::Unit::TestCase
   
   def test_new_with_block
     thread_count = Thread.list.length
-    pool = PoolParty.new :size => 1 do |party|
+    pool = ThreadStorm.new :size => 1 do |party|
       party.execute{ sleep(0.01); "one" }
       party.execute{ sleep(0.01); "two" }
       party.execute{ sleep(0.01); "three" }
