@@ -4,7 +4,7 @@
 # -*- encoding: utf-8 -*-
 
 Gem::Specification.new do |s|
-  s.name = %q{pool_party}
+  s.name = %q{thread_storm}
   s.version = "0.3.0"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
@@ -24,22 +24,22 @@ Gem::Specification.new do |s|
      "README.rdoc",
      "Rakefile",
      "VERSION",
-     "lib/pool_party.rb",
-     "lib/pool_party/active_support.rb",
-     "lib/pool_party/execution.rb",
-     "lib/pool_party/worker.rb",
-     "pool_party.gemspec",
+     "lib/thread_storm.rb",
+     "lib/thread_storm/active_support.rb",
+     "lib/thread_storm/execution.rb",
+     "lib/thread_storm/worker.rb",
+     "thread_storm.gemspec",
      "test/helper.rb",
-     "test/test_pool_party.rb"
+     "test/test_thread_storm.rb"
   ]
-  s.homepage = %q{http://github.com/cjbottaro/pool_party}
+  s.homepage = %q{http://github.com/cjbottaro/thread_storm}
   s.rdoc_options = ["--charset=UTF-8"]
   s.require_paths = ["lib"]
   s.rubygems_version = %q{1.3.6}
   s.summary = %q{Simple thread pool with a few advanced features.}
   s.test_files = [
     "test/helper.rb",
-     "test/test_pool_party.rb"
+     "test/test_thread_storm.rb"
   ]
 
   if s.respond_to? :specification_version then
